--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_torch: ^0.2.3
   camera: ^0.5.7+4
+  provider: ^4.1.0
 
 dev_dependencies:
   flutter_test:
