--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_torch: ^0.2.3
-  camera: ^0.5.7+4
   provider: ^4.1.0
+  adv_camera: ^1.0.0+1
+  image_picker: ^0.6.6+1
+  permission_handler: ^4.4.0+hotfix.4
+  photo_view: ^0.9.2
+  flutter_html: ^0.11.1
+  share: ^0.6.4
 
 dev_dependencies:
   flutter_test:
@@ -44,8 +48,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - assets/icon/
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
