--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  provider: ^4.1.0
+  provider: ^4.1.1
   adv_camera: ^1.0.0+1
   image_picker: ^0.6.6+1
   permission_handler: ^4.4.0+hotfix.4
   photo_view: ^0.9.2
   flutter_html: ^0.11.1
   share: ^0.6.4
+  flutter_torch: ^0.2.3
 
 dev_dependencies:
   flutter_test:
